--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,7 @@
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: #ffffff;
-  color: #2e2f42;
-  line-height: 1.5;
-  font-size: 16px;
+  background-color: #fff;
+  color: #434455;
 }
 
 ul,
@@ -15,16 +13,45 @@ a {
   text-decoration: none;
 }
 
-.header {
-  background-color: #2e2f42;
+.logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
 }
 
-.header h1 {
-  color: #fff;
+.header-logo .logo-part {
+  color: #2e2f42;
+}
+
+.nav-link {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
+.address {
+  font-style: normal;
+}
+
+.address-link {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
 }
 
 .footer {
   background-color: #2e2f42;
+}
+
+.footer-logo .logo-part {
+  color: #f4f4fd;
 }
 
 .footer p {
