--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,6 @@ a {
 }
 
 .promo-title {
-  font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
@@ -80,6 +79,8 @@ a {
   background-color: #404bbf;
 }
 
+
+
 .features-subtitle {
   font-weight: 500;
   font-size: 20px;
@@ -99,7 +100,6 @@ a {
 }
 
 .team-title {
-  font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
@@ -128,7 +128,6 @@ a {
 }
 
 .portfolio-title {
-  font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
@@ -159,5 +158,8 @@ a {
 }
 
 .footer p {
-  color: #fff;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
 }
