--- a/css/styles.css
+++ b/css/styles.css
@@ -40,9 +40,11 @@ a {
 }
 
 .address-link {
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  color: #434455;
 }
 
 .nav-link:hover,
@@ -135,6 +137,8 @@ a {
   color: #2e2f42;
 }
 
+.portfolio-img {}
+
 .portfolio-subtitle {
   font-weight: 500;
   font-size: 20px;
@@ -144,6 +148,7 @@ a {
 }
 
 .portfolio-text {
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
